[FAB-5726] 3. Support 'add' for dynamic config update
The ability to dynamically add identities and/or
affiliations to the fabric-ca server is now
supported from the fabric-ca-client.

Support for removing and modifying server configuration
will follow.
